--- a/java/AndroidManifest.xml
+++ b/java/AndroidManifest.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2012 The Android Open Source Project
+<?xml version="1.0" encoding="utf-8"?><!-- Copyright (C) 2012 The Android Open Source Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -17,7 +16,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     coreApp="true"
-        package="com.android.inputmethod.tian">
+    package="com.android.inputmethod.tian">
 
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -49,48 +48,56 @@
                  .setPackage("com.android.inputmethod.latin"));
          }
          </pre> -->
-    <permission android:name="com.android.inputmethod.tian.HIDE_SOFT_INPUT"
-                android:protectionLevel="signature" />
+    <permission
+        android:name="com.android.inputmethod.tian.HIDE_SOFT_INPUT"
+        android:protectionLevel="signature" />
 
-    <application android:label="@string/english_ime_name"
-            android:icon="@drawable/ic_launcher_keyboard"
-            android:supportsRtl="true"
-            android:allowBackup="true"
-            android:defaultToDeviceProtectedStorage="true"
-            android:directBootAware="true"
+    <application
+        android:allowBackup="true"
+        android:defaultToDeviceProtectedStorage="true"
+        android:directBootAware="true"
+        android:icon="@drawable/ic_launcher_keyboard"
+        android:label="@string/english_ime_name"
+        android:supportsRtl="true"
         tools:ignore="GoogleAppIndexingWarning">
 
         <!-- Services -->
-        <service android:name="com.android.inputmethod.latin.LatinIME"
-                android:label="@string/english_ime_name"
-                android:permission="android.permission.BIND_INPUT_METHOD">
+        <service
+            android:name="com.android.inputmethod.latin.LatinIME"
+            android:label="@string/english_ime_name"
+            android:permission="android.permission.BIND_INPUT_METHOD">
             <intent-filter>
                 <action android:name="android.view.InputMethod" />
             </intent-filter>
-            <meta-data android:name="android.view.im" android:resource="@xml/method" />
+            <meta-data
+                android:name="android.view.im"
+                android:resource="@xml/method" />
         </service>
 
-        <service android:name="com.android.inputmethod.latin.spellcheck.AndroidSpellCheckerService"
-                 android:label="@string/spell_checker_service_name"
-                 android:permission="android.permission.BIND_TEXT_SERVICE">
+        <service
+            android:name="com.android.inputmethod.latin.spellcheck.AndroidSpellCheckerService"
+            android:label="@string/spell_checker_service_name"
+            android:permission="android.permission.BIND_TEXT_SERVICE">
             <intent-filter>
                 <action android:name="android.service.textservice.SpellCheckerService" />
             </intent-filter>
-            <meta-data android:name="android.view.textservice.scs"
-                    android:resource="@xml/spellchecker" />
+            <meta-data
+                android:name="android.view.textservice.scs"
+                android:resource="@xml/spellchecker" />
         </service>
 
-        <service android:name="com.android.inputmethod.dictionarypack.DictionaryService"
-                android:label="@string/dictionary_service_name">
-        </service>
+        <service
+            android:name="com.android.inputmethod.dictionarypack.DictionaryService"
+            android:label="@string/dictionary_service_name"></service>
 
         <!-- Activities -->
-        <activity android:name="com.android.inputmethod.latin.setup.SetupActivity"
-                android:theme="@style/platformActivityTheme"
-                android:label="@string/english_ime_name"
-                android:icon="@drawable/ic_launcher_keyboard"
-                android:launchMode="singleTask"
-                android:noHistory="true">
+        <activity
+            android:name="com.android.inputmethod.latin.setup.SetupActivity"
+            android:icon="@drawable/ic_launcher_keyboard"
+            android:label="@string/english_ime_name"
+            android:launchMode="singleTask"
+            android:noHistory="true"
+            android:theme="@style/platformActivityTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -99,56 +106,61 @@
 
         <activity
             android:name="com.android.inputmethod.latin.permissions.PermissionsActivity"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar"
             android:exported="false"
-            android:taskAffinity="" >
-        </activity>
+            android:taskAffinity=""
+            android:theme="@android:style/Theme.Translucent.NoTitleBar"></activity>
 
-        <activity android:name="com.android.inputmethod.latin.setup.SetupWizardActivity"
-                android:theme="@style/platformActivityTheme"
-                android:label="@string/english_ime_name"
-                android:clearTaskOnLaunch="true">
+        <activity
+            android:name="com.android.inputmethod.latin.setup.SetupWizardActivity"
+            android:clearTaskOnLaunch="true"
+            android:label="@string/english_ime_name"
+            android:theme="@style/platformActivityTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
         </activity>
 
-        <activity android:name="com.android.inputmethod.latin.settings.SettingsActivity"
-                android:theme="@style/platformSettingsTheme"
-                android:label="@string/english_ime_settings">
+        <activity
+            android:name="com.android.inputmethod.latin.settings.SettingsActivity"
+            android:label="@string/english_ime_settings"
+            android:theme="@style/platformSettingsTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
         </activity>
 
-        <activity android:name="com.android.inputmethod.latin.spellcheck.SpellCheckerSettingsActivity"
-                  android:theme="@style/platformSettingsTheme"
-                  android:label="@string/android_spell_checker_settings">
+        <activity
+            android:name="com.android.inputmethod.latin.spellcheck.SpellCheckerSettingsActivity"
+            android:label="@string/android_spell_checker_settings"
+            android:theme="@style/platformSettingsTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
             </intent-filter>
         </activity>
 
-        <activity android:name="com.android.inputmethod.dictionarypack.DictionarySettingsActivity"
-                android:theme="@style/platformSettingsTheme"
-                android:label="@string/dictionary_settings_title"
-                android:uiOptions="splitActionBarWhenNarrow">
+        <activity
+            android:name="com.android.inputmethod.dictionarypack.DictionarySettingsActivity"
+            android:label="@string/dictionary_settings_title"
+            android:theme="@style/platformSettingsTheme"
+            android:uiOptions="splitActionBarWhenNarrow">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
             </intent-filter>
         </activity>
 
-        <activity android:name="com.android.inputmethod.dictionarypack.DownloadOverMeteredDialog"
-                android:theme="@style/platformActivityTheme"
-                android:label="@string/dictionary_install_over_metered_network_prompt">
+        <activity
+            android:name="com.android.inputmethod.dictionarypack.DownloadOverMeteredDialog"
+            android:label="@string/dictionary_install_over_metered_network_prompt"
+            android:theme="@style/platformActivityTheme">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
             </intent-filter>
         </activity>
 
         <!-- Unexported activity used for tests. -->
-        <activity android:name="com.android.inputmethod.latin.settings.TestFragmentActivity"
-                android:exported="false" />
+        <activity
+            android:name="com.android.inputmethod.latin.settings.TestFragmentActivity"
+            android:exported="false" />
 
         <!-- Broadcast receivers -->
         <receiver android:name="com.android.inputmethod.latin.SystemBroadcastReceiver">
@@ -160,7 +172,9 @@
             </intent-filter>
         </receiver>
 
-        <receiver android:name="com.android.inputmethod.latin.DictionaryPackInstallBroadcastReceiver" android:exported="false">
+        <receiver
+            android:name="com.android.inputmethod.latin.DictionaryPackInstallBroadcastReceiver"
+            android:exported="false">
             <intent-filter>
                 <action android:name="com.android.inputmethod.dictionarypack.aosp.UNKNOWN_CLIENT" />
             </intent-filter>
@@ -183,12 +197,12 @@
         </receiver>
 
         <!-- Content providers -->
-        <provider android:name="com.android.inputmethod.dictionarypack.DictionaryProvider"
-                android:grantUriPermissions="true"
-                android:exported="false"
-                android:authorities="@string/authority"
-                android:multiprocess="false"
-                android:label="@string/dictionary_provider_name">
-        </provider>
+        <provider
+            android:name="com.android.inputmethod.dictionarypack.DictionaryProvider"
+            android:authorities="@string/authority"
+            android:exported="false"
+            android:grantUriPermissions="true"
+            android:label="@string/dictionary_provider_name"
+            android:multiprocess="false"></provider>
     </application>
 </manifest>
